--- a/ui/dialogs/playlistplayer.ui
+++ b/ui/dialogs/playlistplayer.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>700</width>
-    <height>700</height>
+    <width>650</width>
+    <height>750</height>
    </rect>
   </property>
   <property name="palette">
@@ -270,6 +270,9 @@
    <extends>QWidget</extends>
    <header>include/components/imageview.h</header>
    <container>1</container>
+   <slots>
+    <signal>viewActivated()</signal>
+   </slots>
   </customwidget>
  </customwidgets>
  <resources/>
