--- a/ui/dialogs/artistedit.ui
+++ b/ui/dialogs/artistedit.ui
@@ -29,7 +29,7 @@
      </property>
      <property name="font">
       <font>
-       <bold>false</bold>
+       <bold>true</bold>
       </font>
      </property>
      <property name="tabShape">
@@ -59,7 +59,7 @@
         <widget class="QLineEdit" name="nameEdit">
          <property name="font">
           <font>
-           <bold>false</bold>
+           <bold>true</bold>
           </font>
          </property>
          <property name="text">
@@ -151,7 +151,7 @@
          </property>
          <property name="font">
           <font>
-           <bold>false</bold>
+           <bold>true</bold>
           </font>
          </property>
          <property name="frameShape">
@@ -267,6 +267,11 @@
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="font">
+      <font>
+       <bold>true</bold>
+      </font>
+     </property>
      <property name="standardButtons">
       <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
      </property>
