--- a/ui/panels/adminpanel.ui
+++ b/ui/panels/adminpanel.ui
@@ -10,6 +10,11 @@
     <height>700</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <bold>true</bold>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Adminstrator</string>
   </property>
@@ -109,6 +114,11 @@
         </item>
         <item row="3" column="0" colspan="3">
          <widget class="QListView" name="artistView">
+          <property name="font">
+           <font>
+            <bold>true</bold>
+           </font>
+          </property>
           <property name="horizontalScrollBarPolicy">
            <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
           </property>
