--- a/ui/panels/adminpanel.ui
+++ b/ui/panels/adminpanel.ui
@@ -116,7 +116,7 @@
          <widget class="QListView" name="artistView">
           <property name="font">
            <font>
-            <bold>true</bold>
+            <bold>false</bold>
            </font>
           </property>
           <property name="horizontalScrollBarPolicy">
