--- a/ui/dialogs/artistview.ui
+++ b/ui/dialogs/artistview.ui
@@ -14,7 +14,7 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">background-color:white</string>
   </property>
   <property name="modal">
    <bool>true</bool>
