--- a/ui/dialogs/playlistedit.ui
+++ b/ui/dialogs/playlistedit.ui
@@ -19,6 +19,9 @@
   <property name="windowTitle">
    <string>Playlist Editor</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color:white</string>
+  </property>
   <property name="modal">
    <bool>true</bool>
   </property>
@@ -27,6 +30,11 @@
     <widget class="QLineEdit" name="nameEdit">
      <property name="enabled">
       <bool>false</bool>
+     </property>
+     <property name="font">
+      <font>
+       <bold>true</bold>
+      </font>
      </property>
      <property name="text">
       <string/>
@@ -54,6 +62,11 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="font">
+      <font>
+       <bold>true</bold>
+      </font>
+     </property>
      <property name="text">
       <string>Name:</string>
      </property>
@@ -63,6 +76,12 @@
     <widget class="QListView" name="songView">
      <property name="enabled">
       <bool>false</bool>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+       <bold>false</bold>
+      </font>
      </property>
      <property name="frameShape">
       <enum>QFrame::Shape::Panel</enum>
