--- a/ui/dialogs/artistedit.ui
+++ b/ui/dialogs/artistedit.ui
@@ -52,7 +52,7 @@
      </property>
      <widget class="QWidget" name="infoWidget">
       <attribute name="title">
-       <string>Information</string>
+       <string>Profile</string>
       </attribute>
       <layout class="QVBoxLayout" name="infoLayout">
        <item>
@@ -89,57 +89,24 @@
         </widget>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="coverControlLayout">
-         <property name="topMargin">
-          <number>0</number>
+        <widget class="QPushButton" name="removeCoverButton">
+         <property name="text">
+          <string/>
          </property>
-         <item>
-          <spacer name="coverLeftSpacer">
-           <property name="orientation">
-            <enum>Qt::Orientation::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <widget class="QPushButton" name="removeCoverButton">
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../../resources.qrc">
-             <normaloff>:/images/dialogs/delete.png</normaloff>:/images/dialogs/delete.png</iconset>
-           </property>
-           <property name="iconSize">
-            <size>
-             <width>32</width>
-             <height>32</height>
-            </size>
-           </property>
-           <property name="flat">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <spacer name="coverRightSpacer">
-           <property name="orientation">
-            <enum>Qt::Orientation::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-        </layout>
+         <property name="icon">
+          <iconset resource="../../resources.qrc">
+           <normaloff>:/images/dialogs/delete.png</normaloff>:/images/dialogs/delete.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>32</width>
+           <height>32</height>
+          </size>
+         </property>
+         <property name="flat">
+          <bool>true</bool>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QTextEdit" name="biographyEdit">
@@ -169,7 +136,7 @@
      </widget>
      <widget class="QWidget" name="playlistWidget">
       <attribute name="title">
-       <string>Playlists</string>
+       <string>Albums</string>
       </attribute>
       <layout class="QVBoxLayout" name="playlistLayout">
        <item>
