Fixed an issue in the UI of the application

--- a/ui/dialogs/playlistedit.ui
+++ b/ui/dialogs/playlistedit.ui
@@ -144,7 +144,7 @@
      <item>
       <widget class="QPushButton" name="removeButton">
        <property name="enabled">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="toolTip">
         <string>Remove</string>
