Added some new genres
Added the icons to the program

--- a/resources.qrc
+++ b/resources.qrc
@@ -10,12 +10,7 @@
         <file>images/player/stop.png</file>
         <file>images/playlist/song.png</file>
         <file>images/player/repeat.png</file>
-        <file>images/genres/classic.png</file>
-        <file>images/genres/country.png</file>
-        <file>images/genres/electronic.png</file>
-        <file>images/genres/folk.png</file>
         <file>images/genres/jazz.png</file>
-        <file>images/genres/pop.png</file>
         <file>images/genres/rap.png</file>
         <file>images/genres/rock.png</file>
         <file>images/logos/logo-1.png</file>
@@ -39,5 +34,36 @@
         <file>images/dialogs/Initialize.png</file>
         <file>images/playlist/single-mode.png</file>
         <file>images/dialogs/edit.png</file>
+        <file>images/genres/alternative.png</file>
+        <file>images/genres/blues.png</file>
+        <file>images/genres/cassette.png</file>
+        <file>images/genres/children-music.png</file>
+        <file>images/genres/christian-music.png</file>
+        <file>images/genres/classic-music.png</file>
+        <file>images/genres/country-music.png</file>
+        <file>images/genres/demon.png</file>
+        <file>images/genres/easy-listening.png</file>
+        <file>images/genres/electronic-music.png</file>
+        <file>images/genres/enka.png</file>
+        <file>images/genres/folk-music.png</file>
+        <file>images/genres/french-music.png</file>
+        <file>images/genres/goth.png</file>
+        <file>images/genres/hip-hop.png</file>
+        <file>images/genres/international-music.png</file>
+        <file>images/genres/irish-music.png</file>
+        <file>images/genres/lullaby.png</file>
+        <file>images/genres/metal-music.png</file>
+        <file>images/genres/oud.png</file>
+        <file>images/genres/pop-music.png</file>
+        <file>images/genres/progressive-rock.png</file>
+        <file>images/genres/punk.png</file>
+        <file>images/genres/reggae.png</file>
+        <file>images/genres/rhythm.png</file>
+        <file>images/genres/rnb.png</file>
+        <file>images/genres/ska.png</file>
+        <file>images/genres/tex-mex.png</file>
+        <file>images/genres/underground-music.png</file>
+        <file>images/genres/us-music.png</file>
+        <file>images/genres/vaporwave.png</file>
     </qresource>
 </RCC>
