--- a/ui/panels/adminpanel.ui
+++ b/ui/panels/adminpanel.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>700</width>
+    <width>783</width>
     <height>700</height>
    </rect>
   </property>
@@ -16,7 +16,11 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>Adminstrator</string>
+   <string>Mockingbird</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="../../resources.qrc">
+    <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color:white</string>
