Improvement on the UI of the program
Set up the icons and appropriate title for each dialog.

--- a/ui/components/player.ui
+++ b/ui/components/player.ui
@@ -86,6 +86,10 @@
   <property name="windowTitle">
    <string/>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../../resources.qrc">
+    <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
+  </property>
   <property name="autoFillBackground">
    <bool>true</bool>
   </property>
