--- a/ui/dialogs/artistview.ui
+++ b/ui/dialogs/artistview.ui
@@ -11,7 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Artist Viewer</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="../../resources.qrc">
+    <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color:white</string>
@@ -157,7 +161,9 @@ li.checked::marker { content: &quot;\2612&quot;; }
    </slots>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="../../resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>playlistView</sender>
