--- a/ui/dialogs/playlistedit.ui
+++ b/ui/dialogs/playlistedit.ui
@@ -19,6 +19,10 @@
   <property name="windowTitle">
    <string>Playlist Editor</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../../resources.qrc">
+    <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">background-color:white</string>
   </property>
